The Samba-Bugzilla – Bug 13209
Small improvements in winbindd for the resource cleanup in error cases
Last modified: 2018-01-31 09:46:09 UTC
This just adds a tmp talloc ctx to a few functions in winbindd and allocates temporaray objects as talloc childs of the talloc tmp ctx.
Created attachment 13907 [details] patch for 4.8
Reassigning to Karolin for inclusion in 4.8.
Pushed to autobuild-v4-8-test.
(In reply to Karolin Seeger from comment #3) Pushed to v4-8-test. Closing out bug report. Thanks!